Open java.lang to Orika